Add new endpoints to OpenApi spec
new endpoints ( all category routes )
