# routes/category.js
@@ -18,9 +18,9 @@ router.get('/categories', categoryController.getCategories);
 
 router.get('/:categoryId', categoryController.getCategory);
 
-router.delete('/delete/:categoryId', isAuth, categoryController.deleteCategory);
+router.delete('/:categoryId', isAuth, categoryController.deleteCategory);
 
-router.put('/edit/:categoryId',
+router.put('/:categoryId',
     [
         body('name', 'Not a Valid Name').trim().not().isEmpty().isLength({ max: 50 }),
         body('description', 'Not a Valid Description').trim().not().isEmpty().isLength({ max: 1000 })
